# Imputation

./: .gitignore  README.md  README.txt
ModHEaaN/: .gitignore
ModHEaaN/heaan/: CMakeLists.txt
ModHEaaN/heaan/include/: Ciphertext.h  Context.h  Decryptor.h  Encryptor.h  HEAAN.h  HomEvaluator.h  Parameters.h  Plaintext.h  PublicKey.h  PublicKeyPack.h  SecretKey.h
ModHEaaN/heaan/include/basic/: BigArith.h  Define.h  PrimeModulus.h  PrimeRing.h  Ring.h  SmallArith.h  Tools.h  cscope.out
ModHEaaN/heaan/src/: Ciphertext.cpp  Context.cpp  Decryptor.cpp  Encryptor.cpp  HomEvaluator.cpp  PublicKey.cpp  PublicKeyPack.cpp
ModHEaaN/heaan/src/basic/: PrimeModulus.cpp  PrimeRing.cpp  Ring.cpp
encrypted/impute_dnn/: .gitignore  CMakeLists.txt  enc_impute.cpp
encrypted/src/: Evaluator.cpp  Evaluator.h  FileReader.cpp  FileReader.h  Parameters.h  PrintUtils.cpp  PrintUtils.h  SNP_Parameters.cpp  SNP_Parameters.h  TimeUtils.cpp  TimeUtils.h
encrypted/window_location/: window16.txt  window24.txt  window24_117k.txt  window32.txt  window40_117k.txt  window40_80k.txt  window48.txt  window56.txt  window56_117k.txt  window64.txt  window72.txt  window72_117k.txt  window8.txt  window8_117k.txt
plain/: New_gen_model_W.py  New_gen_model_W_AFR.py  New_gen_model_W_AMR.py  New_gen_model_W_EUR.py  New_gen_model_W_total.py  README.txt  real_20k.csv  real_40k.csv  real_80k.csv  real_AFR_80k.csv  real_AMR_80k.csv  real_EUR_80k.csv
